fixed alignment issue with forms

--- a/src/components/EditUser.css
+++ b/src/components/EditUser.css
@@ -1,4 +1,4 @@
-.form-div{
+/* .form-div{
     margin-top: 120px;
 }
 
@@ -10,4 +10,4 @@
 .form-input{
     margin-bottom: 20px;
     margin-left: 20px;
-}
+} */
