--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,9 @@ code {
 }
 
 .search input{
-   padding: 0.5rem;
+   /* padding: 0.5rem;
    font-size: 1.5rem;
    width: 100%;
-   z-index:10;
+   z-index:10; */
 }
 
